added database connection

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,14 @@
 			function emptyCallback () {};
 		</script>
 
+		<!-- include an external JavaScript file -->
+		<script type="module" src="script.js"></script>
+
+		<script type="module">
+		  import {} from "./script.js";
+
+		</script>
+
 	</head>
 
 	<body>
@@ -25,10 +33,6 @@
 				Template Change Test 4
 			</h1>
 		</div>
-
-		
-		<!-- include an external JavaScript file -->
-		<script src="script.js"></script>
 
 	</body>
 </html>
