--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,13 @@
 	</head>
 
 	<body>
+<!--<svg width="100vw" height="200px" id="r1">
+  <rect width="100%" height="100%" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)" />
+</svg> <!--https://www.w3schools.com/graphics/svg_rect.asp-->
+
+<!--<svg width="200px" height="100vh" id="r2">
+  <rect width="100%" height="100%" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)" />
+</svg>-->
 
 	<div class="main">
     <div id="c1"></div>
