--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="description" content="Template for PWA Website" />
 		<meta name="theme-color" content="#ffffff"/>
 
@@ -21,21 +21,30 @@
 
 		<script type="module">
 		  import {} from "./script.js";
+		  
 
 		</script>
 
 	</head>
 
 	<body>
-<!--<svg width="100vw" height="200px" id="r1">
-  <rect width="100%" height="100%" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)" />
-</svg> https://www.w3schools.com/graphics/svg_rect.asp-->
+<svg width="100vw" height="150px" id="r1">
+  <rect width="100%" height="100%" style="fill:rgb(0,0,255)" />
+</svg> <!--https://www.w3schools.com/graphics/svg_rect.asp-->
 
-<!--<svg width="200px" height="100vh" id="r2">
-  <rect width="100%" height="100%" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)" />
-</svg>-->
+<svg width="100vw" height="100px" id="r2">
+  <rect width="100%" height="100%" style="fill:rgb(0,0,255)" />
+</svg>
 
-	<div class="main">
+<svg width="50px" height="100vh" id="r3">
+  <rect width="100%" height="100%" style="fill:rgb(0,0,255)" />
+</svg>
+
+<svg width="50px" height="100vh" id="r4">
+  <rect width="100%" height="100%" style="fill:rgb(0,0,255)" />
+</svg>
+
+	<div class="main" id="main">
     <div id="c1"></div>
     <div id="c2"></div>
     <div id="c3"></div>
