--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
 		<meta name="description" content="Template for PWA Website" />
 		<meta name="theme-color" content="#ffffff"/>
 
@@ -27,11 +27,40 @@
 	</head>
 
 	<body>
-<svg width="100vw" height="150px" id="r1">
+	
+<div id="pass1"></div>
+<br>
+<br>
+<div id="pass2"></div>
+<div id="numplay"></div>
+
+     <div id="lightbox">
+      <div id="message">
+	  <h1>Shadow Legends</h1>
+	  <div id="error">Dude, put in a passphrase</div>
+	  <br>
+	  <br>
+	  <div id="text">Lobby:</div>
+	  <br>
+	  <input type="text" id="passphrase" name="passphrase" maxlength="10">
+	  <br><br>
+	  
+	  	  
+	  <div id="text">Passphrase:</div>
+	  <br>
+	  <input type="text" id="passphrase2" name="passphrase2" maxlength="10">
+	  <br><br>
+	  
+	  <button id="passbutton" >Submit</button>
+	  
+	  </div>
+    </div>
+
+<svg width="100vw" height="170px" id="r1">
   <rect width="100%" height="100%" style="fill:rgb(0,0,255)" />
 </svg> <!--https://www.w3schools.com/graphics/svg_rect.asp-->
 
-<svg width="100vw" height="100px" id="r2">
+<svg width="100vw" height="120px" id="r2">
   <rect width="100%" height="100%" style="fill:rgb(0,0,255)" />
 </svg>
 
@@ -68,6 +97,8 @@
     <div id="c21"></div>
     <div id="c22"></div>
     <div id="c23"></div>
+	
+
 
 	</body>
 </html>
