--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
     <rect width="100%" height="100%" style="fill:rgb(0,0,255)" />
   </svg>
 
-  <div class="main">
+  <div id="main">
     <div id="c1"></div>
     <div id="c2"></div>
     <div id="c3"></div>
