--- a/public/index.html
+++ b/public/index.html
@@ -55,21 +55,52 @@
       </div>
     </div>
 
-<svg width="100vw" height="15vh" id="r1">
-  <rect width="100%" height="100%" style="fill:rgb(0,0,255)" />
-</svg> <!--https://www.w3schools.com/graphics/svg_rect.asp-->
+<div id="r1">
+</div>
+
+<div id="r2">
+</div>
+
+<div id="r3">
+</div>
+
+<div id="r4">
+</div>
+
+<div id="r5">
+</div>
+
+<div id="r6">
+</div>
+
+<!--<div id="armydiv">
+		<div id="infantinfo">
+		4:  <img src="soldier.svg" width="5vw">
+		</div>
+		<div id="tankinfo">
+		2:  <img src="tank.svg" width="5vw">
+		</div>
+		<div id="artinfo">
+		1:  <img src="artillery.svg" width="5vw">
+		</div>
+	
+	</div>*
+
+<!--<svg width="100vw" height="15vh" id="r1">
+  <rect width="100%" height="100%" style="fill:rgb(58, 82, 41)" />
+</svg> <!--https://www.w3schools.com/graphics/svg_rect.asp
 
 <svg width="100vw" height="15vh" id="r2">
-  <rect width="100%" height="100%" style="fill:rgb(0,0,255)" />
+  <rect width="100%" height="100%" style="fill:rgb(58, 82, 41)" />
 </svg>
 
 <svg width="3vw" height="100vh" id="r3">
-  <rect width="100%" height="100%" style="fill:rgb(0,0,255)" />
+  <rect width="100%" height="100%" style="fill:rgb(58, 82, 41)" />
 </svg>
 
 <svg width="3vw" height="100vh" id="r4">
-  <rect width="100%" height="100%" style="fill:rgb(0,0,255)" />
-</svg>
+  <rect width="100%" height="100%" style="fill:rgb(58, 82, 41)" />
+</svg>-->
 
 	<div class="main">
     <div id="c1"></div>
