--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <div id="pass1"></div>
     <div id="pass2"></div>
     <div id="numplay"></div>
+	<div id="turn"></div>
     <button id="startbutton" onclick="startGame()">
       Start Game
     </button>
