--- a/public/index.html
+++ b/public/index.html
@@ -41,25 +41,27 @@
   </div>
   <div id="lightbox">
     <div id="message">
-      <h1>Shadow Legends</h1>
+      <h1 id="title">Shadow Legends</h1>
       <div id="error">Dude, put in a passphrase</div>
       <br>
+      <div id="text1">Lobby:</div>
       <br>
-      <div id="text">Lobby:</div>
-      <br>
+	  <div id="info1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempor nisi non metus vestibulum aliquet.</div>
       <input type="text" id="passphrase" name="passphrase" maxlength="10">
-      <br><br>
+      <br><br><br>
 
-
-      <div id="text">Passphrase:</div>
+      <div id="text2">Passphrase:</div>
       <br>
+	  <div id="info2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempor nisi non metus vestibulum aliquet.</div>
       <input type="text" id="passphrase2" name="passphrase2" maxlength="10">
       <br><br>
-
       <button id="passbutton">Submit</button>
+	  <br><button id="ok">OK</button>
 
     </div>
   </div>
+  
+  
 
   <div id="r1">
   </div>
