--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,8 @@
   <div id="r6">
   </div>
 
-  <!--<div id="armydiv">
+<!--
+    <div id="armydiv">
 		<div id="infantinfo">
 		4:  <img src="soldier.svg" width="5vw">
 		</div>
@@ -92,23 +93,9 @@
 		1:  <img src="artillery.svg" width="5vw">
 		</div>
 	
-	</div>*
+	</div>
+-->
 
-<!--<svg width="100vw" height="15vh" id="r1">
-  <rect width="100%" height="100%" style="fill:rgb(58, 82, 41)" />
-</svg> <!--https://www.w3schools.com/graphics/svg_rect.asp
-
-<svg width="100vw" height="15vh" id="r2">
-  <rect width="100%" height="100%" style="fill:rgb(58, 82, 41)" />
-</svg>
-
-<svg width="3vw" height="100vh" id="r3">
-  <rect width="100%" height="100%" style="fill:rgb(58, 82, 41)" />
-</svg>
-
-<svg width="3vw" height="100vh" id="r4">
-  <rect width="100%" height="100%" style="fill:rgb(58, 82, 41)" />
-</svg>-->
 
   <div id="main">
     <div id="c1"></div>
@@ -123,7 +110,7 @@
     <div id="c10"></div>
     <div id="c11"></div>
     <div id="c12"></div>
-
+    
     <div id="c13"></div>
     <div id="c14"></div>
     <div id="c15"></div>
