adds selecting functionality - also changes the colours of units

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,6 @@
     <div id="pass1"></div>
     <div id="pass2"></div>
     <div id="numplay"></div>
-	<div id="turn"></div>
     <button id="startbutton" onclick="startGame()">
       Start Game
     </button>
@@ -41,27 +40,25 @@
   </div>
   <div id="lightbox">
     <div id="message">
-      <h1 id="title">Shadow Legends</h1>
+      <h1>Shadow Legends</h1>
       <div id="error">Dude, put in a passphrase</div>
       <br>
-      <div id="text1">Lobby:</div>
       <br>
-	  <div id="info1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempor nisi non metus vestibulum aliquet.</div>
+      <div id="text">Lobby:</div>
+      <br>
       <input type="text" id="passphrase" name="passphrase" maxlength="10">
-      <br><br><br>
+      <br><br>
 
-      <div id="text2">Passphrase:</div>
+
+      <div id="text">Passphrase:</div>
       <br>
-	  <div id="info2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempor nisi non metus vestibulum aliquet.</div>
       <input type="text" id="passphrase2" name="passphrase2" maxlength="10">
       <br><br>
+
       <button id="passbutton">Submit</button>
-	  <br><button id="ok">OK</button>
 
     </div>
   </div>
-  
-  
 
   <div id="r1">
   </div>
@@ -137,12 +134,7 @@
     <div id="c23"></div>
   </div>
 
-<img src="images/plus.png" width="50px" id="plus">
-<img src="images/minus.png" width="50px" id="minus">
-<img src="images/arrow.png" width="50px" id="up11">
-<img src="images/arrow.png" width="50px" id="right">
-<img src="images/arrow.png" width="50px" id="down">
-<img src="images/arrow.png" width="50px" id="left">
+  
 
 </body>
 
