--- a/public/index.html
+++ b/public/index.html
@@ -29,14 +29,17 @@
 </head>
 
 <body>
+
+<div id="totaldiv">
   <div id="infodiv">
     <div id="pass1"></div>
     <div id="pass2"></div>
     <div id="numplay"></div>
-	<div id="turn"></div>
-    <button id="startbutton" onclick="startGame()">
+</div>
+	    <button id="startbutton" onclick="startGame()">
       Start Game
     </button>
+	<div id="turn"></div>
 
   </div>
   <div id="lightbox">
@@ -124,12 +127,14 @@
     <div id="c23"></div>
   </div>
 
-<img src="images/plus.png" width="50px" id="plus">
-<img src="images/minus.png" width="50px" id="minus">
-<img src="images/arrow.png" width="50px" id="up11">
-<img src="images/arrow.png" width="50px" id="right">
-<img src="images/arrow.png" width="50px" id="down">
-<img src="images/arrow.png" width="50px" id="left">
+<div id="controldiv">
+<img src="images/plus.svg" width="50px" id="plus">
+<img src="images/minus.svg" width="50px" id="minus">
+<img src="images/arrow.svg" width="50px" id="up11">
+<img src="images/arrow.svg" width="50px" id="right">
+<img src="images/arrow.svg" width="50px" id="down">
+<img src="images/arrow.svg" width="50px" id="left">
+</div>
 
 </body>
 
