--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,6 @@
     <div id="pass1"></div>
     <div id="pass2"></div>
     <div id="numplay"></div>
-</div>
 	    <button id="startbutton" onclick="startGame()">
       Start Game
     </button>
@@ -44,27 +43,25 @@
   </div>
   <div id="lightbox">
     <div id="message">
-      <h1 id="title">Shadow Legends</h1>
+      <h1>Shadow Legends</h1>
       <div id="error">Dude, put in a passphrase</div>
       <br>
-      <div id="text1">Lobby:</div>
       <br>
-	  <div id="info1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempor nisi non metus vestibulum aliquet.</div>
+      <div id="text">Lobby:</div>
+      <br>
       <input type="text" id="passphrase" name="passphrase" maxlength="10">
-      <br><br><br>
+      <br><br>
 
-      <div id="text2">Passphrase:</div>
+
+      <div id="text">Passphrase:</div>
       <br>
-	  <div id="info2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempor nisi non metus vestibulum aliquet.</div>
       <input type="text" id="passphrase2" name="passphrase2" maxlength="10">
       <br><br>
+
       <button id="passbutton">Submit</button>
-	  <br><button id="ok">OK</button>
 
     </div>
   </div>
-  
-  
 
   <div id="r1">
   </div>
@@ -126,7 +123,6 @@
     <div id="c22"></div>
     <div id="c23"></div>
   </div>
-
 <div id="controldiv">
 <img src="images/plus.svg" width="50px" id="plus">
 <img src="images/minus.svg" width="50px" id="minus">
