--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
     <div id="pass2"></div>
     <div id="numplay"></div>
 </div>
+
+<div id="btndiv">
 	    <button id="startbutton" onclick="startGame()">
       Start Game
     </button>
@@ -43,10 +45,11 @@
 	<div id="turn">
 	</div>
 	
-	<button id="fired">
+	<button id="toggle">
 	      TOGGLE FIRE
     </button>
 
+  </div>
   </div>
   <div id="lightbox">
     <div id="message">
