added button code

--- a/public/index.html
+++ b/public/index.html
@@ -36,16 +36,18 @@
     <div id="pass2"></div>
     <div id="numplay"></div>
 </div>
-	    <button id="startbutton" onclick="startGame()">
+  <div id="btndiv">
+    <button id="startbutton" onclick="startGame()">
       Start Game
     </button>
-	
-	<div id="turn">
-	</div>
-	
-	<button id="fired">
-	      TOGGLE FIRE
+    
+    <div id="turn">
+    </div>
+    
+    <button id="toggle">
+          TOGGLE FIRE
     </button>
+  </div>
 
   </div>
   <div id="lightbox">
