--- a/public/index.html
+++ b/public/index.html
@@ -36,20 +36,19 @@
     <div id="pass2"></div>
     <div id="numplay"></div>
 </div>
-
-<div id="btndiv">
-	    <button id="startbutton" onclick="startGame()">
+  <div id="btndiv">
+    <button id="startbutton" onclick="startGame()">
       Start Game
     </button>
-	
-	<div id="turn">
-	</div>
-	
-	<button id="toggle">
-	      TOGGLE FIRE
+    
+    <div id="turn">
+    </div>
+    
+    <button id="toggle">
+      Moving Units
     </button>
-
   </div>
+
   </div>
   <div id="lightbox">
     <div id="message">
@@ -143,6 +142,12 @@
     <div id="c22"></div>
     <div id="c23"></div>
   </div>
+
+<div id="bottombutton">
+<button id="skip">Skip Turn</button>
+<button id="rules">Rules</button>
+</div>
+
 
 <div id="controldiv">
 <img src="images/plus.svg" width="50px" id="plus">
