--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
 
 <body>
 
+<!--https://www.flaticon.com/free-icon/tank_4594001?term=tank&page=1&position=23&origin=search&related_id=4594001 Icon link--> 
+
 <div id="totaldiv">
   <div id="infodiv">
     <div id="pass1"></div>
@@ -58,15 +60,12 @@
       <div id="text1">Lobby:</div>
       <br>
 	  <div id="info1">
-      <b>Use W, A, S, D to navigate around the map</b><br>
-      <b>Use E to zoom into the map and Q to zoom out.</b><br><br>
-      <b>To move or fire a unit, first click to select it, then click on the hex you want to move to/shoot.</b><br>
-      <b>Then, you can toggle between movement and shooting with the toggle button at the top of the screen.</b><br>
-      <b>Every one of your units gets a set ammount of actions per turn, which can be spent on either movement or firing.</b><br><br>
-      <b>There are three types of units: Infantry, Armor, and Artillery.</b><br>
-      <b>Infantry can see three tiles, can shoot two tiles, have two actions per turn, and three health.</b><br>
-      <b>Armor can see two tiles, can shoot two tiles, have three actions per turn, and four health.</b><br>
-      <b>Artillery can see one tile, can shoot five tiles, have one action per turn, and deal four times the damage of infantry and armor.</b><br><br>
+		<b>Use W, A, S, D to navigate around the map</b><br><br>
+		<b>Use E to zoom into the map and Q to zoom out.</b><br><br>
+		<b>To move, left click on a piece and left click on the desired hex.</b><br><br>
+		<b>To shoot, left click on a piece and right click on the desired target.</b>
+	
+	  
 	  </div>
 	  
       <input type="text" id="passphrase" name="passphrase" maxlength="10">
@@ -145,6 +144,12 @@
     <div id="c22"></div>
     <div id="c23"></div>
   </div>
+
+<div id="bottombutton">
+<button id="skip">Skip Turn</button>
+<button id="rules">Rules</button>
+</div>
+
 
 <div id="controldiv">
 <img src="images/plus.svg" width="50px" id="plus">
