added comments and fixed bugs

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Template for PWA Website" />
-  <meta name="theme-color" content="#ffffff" />
+  <meta name="description" content="Template for PWA Website" >
+  <meta name="theme-color" content="#ffffff" >
 
   <title>Shadow Legends</title>
 
-  <link rel="icon" type="image/x-icon" href="/images/favicon256.png" />
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="icon" type="image/x-icon" href="/images/favicon256.png" >
+  <link rel="manifest" href="/manifest.json" >
   <link rel="stylesheet" href="style.css">
 
   <script>
@@ -55,7 +55,7 @@
       <h1 id="title">Shadow Legends</h1>
       <div id="error">Dude, put in a passphrase</div>
       <br>
-      <div id="text1">Lobby:</div>
+      <label for="passphrase" id="text1">Lobby:</label>
       <br>
 	  <div id="info1">
       <b>Use W, A, S, D to navigate around the map</b><br>
@@ -72,7 +72,7 @@
       <input type="text" id="passphrase" name="passphrase" maxlength="10">
       <br><br><br>
 
-      <div id="text2">Passphrase:</div>
+      <label for="passphrase2" id="text2">Passphrase:</label>
       <br>
 	  <div id="info2"><b>Destroy the enemy base using your pieces, infantry, tanks, and artillery while protecting your own base. You can destroy enemy pieces to clear your way to the base.</b></div>
       <input type="text" id="passphrase2" name="passphrase2" maxlength="10">
@@ -152,12 +152,12 @@
     </div>
 
 <div id="controldiv">
-<img src="images/plus.svg" width="50px" id="plus">
-<img src="images/minus.svg" width="50px" id="minus">
-<img src="images/arrow.svg" width="50px" id="up11">
-<img src="images/arrow.svg" width="50px" id="right">
-<img src="images/arrow.svg" width="50px" id="down">
-<img src="images/arrow.svg" width="50px" id="left">
+<img alt="+" src="images/plus.svg" width="50" id="plus">
+<img alt="-" src="images/minus.svg" width="50" id="minus">
+<img alt="up" src="images/arrow.svg" width="50" id="up11">
+<img alt="right" src="images/arrow.svg" width="50" id="right">
+<img alt="left" src="images/arrow.svg" width="50" id="down">
+<img alt="down" src="images/arrow.svg" width="50" id="left">
 </div>
 
 </body>
