--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
       <input type="text" id="passphrase2" name="passphrase2" maxlength="10">
       <br><br>
       <button id="passbutton">Submit</button>
-	  <br><button id="ok">OK</button>
+	  <!--<br><button id="ok">OK</button>-->
 
     </div>
   </div>
